syntax = "proto3";

package appointment;

message Appointment {
    string id = 1; 
    string BusinessNodeId = 2;
    string CustomerId = 3;
    string BusinessUserId = 4;
    string BusinessServiceId = 5;
    string StartTime = 6;
    string EndTime = 7;
    string Type = 8;
    string Note = 9;
    string StatusCode = 10;
    int32 Fees = 11;
    int32 Tax = 12;
    int32 Tip = 13;
    int32 Discount = 14;
    int32 Total = 15;
    bool IsPaid = 16;
  }

message AppointmentCreateModel {
  string BusinessNodeId = 1;
  string CustomerId = 2;
  string BusinessUserId = 3;
  string BusinessServiceId = 4;
  string StartTime = 5;
  string EndTime = 6;
  string Type = 7;
  string Note = 8;
  string StatusCode = 9;
  int32 Fees = 10;
  int32 Tax = 11;
  int32 Tip = 12;
  int32 Discount = 13;
  int32 Total = 14;
  bool IsPaid = 15;
}

message AppointmentGetByIdModel {
    string id = 1; 
}

message AppointmentGetByIdResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string CustomerId = 3;
  string BusinessUserId = 4;
  string BusinessServiceId = 5;
  string StartTime = 6;
  string EndTime = 7;
  string Type = 8;
  string Note = 9;
  string StatusCode = 10;
  int32 Fees = 11;
  int32 Tax = 12;
  int32 Tip = 13;
  int32 Discount = 14;
  int32 Total = 15;
  bool IsPaid = 16;
}

message AppointmentCreateResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string CustomerId = 3;
  string BusinessUserId = 4;
  string BusinessServiceId = 5;
  string StartTime = 6;
  string EndTime = 7;
  string Type = 8;
  string Note = 9;
  string StatusCode = 10;
  int32 Fees = 11;
  int32 Tax = 12;
  int32 Tip = 13;
  int32 Discount = 14;
  int32 Total = 15;
  bool IsPaid = 16;
}

message AppointmentUpdateModel {
  string id = 1; 
  string BusinessNodeId = 2;
  string CustomerId = 3;
  string BusinessUserId = 4;
  string BusinessServiceId = 5;
  string StartTime = 6;
  string EndTime = 7;
  string Type = 8;
  string Note = 9;
  string StatusCode = 10;
  int32 Fees = 11;
  int32 Tax = 12;
  int32 Tip = 13;
  int32 Discount = 14;
  int32 Total = 15;
  bool IsPaid = 16;
}

message AppointmentUpdateResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string CustomerId = 3;
  string BusinessUserId = 4;
  string BusinessServiceId = 5;
  string StartTime = 6;
  string EndTime = 7;
  string Type = 8;
  string Note = 9;
  string StatusCode = 10;
  int32 Fees = 11;
  int32 Tax = 12;
  int32 Tip = 13;
  int32 Discount = 14;
  int32 Total = 15;
  bool IsPaid = 16;
}

message AppointmentSearchModel {
    string businessUserId = 1;
    string fromDate = 2;
    string toDate = 3;
}

message AppointmentSearchResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string CustomerId = 3;
  string BusinessUserId = 4;
  string BusinessServiceId = 5;
  string StartTime = 6;
  string EndTime = 7;
  string Type = 8;
  string Note = 9;
  string StatusCode = 10;
  int32 Fees = 11;
  int32 Tax = 12;
  int32 Tip = 13;
  int32 Discount = 14;
  int32 Total = 15;
  bool IsPaid = 16;
}

message AppointmentDeleteModel {
    string id = 1;
}

  message AppointmentDeleteResponse {
    string id = 1;
}

service Appointments {
    rpc Create(AppointmentCreateModel) returns (AppointmentCreateResponse);
    rpc GetById(AppointmentGetByIdModel) returns (AppointmentGetByIdResponse) {};
    rpc Search(AppointmentSearchModel) returns (AppointmentSearchResponse) {};
    rpc Update(AppointmentUpdateModel) returns (AppointmentUpdateResponse) {};
    rpc Delete(AppointmentDeleteModel) returns (AppointmentDeleteResponse) {};

}